--- a/style.css
+++ b/style.css
@@ -120,13 +120,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-image: url(img/getbosted.png);
     justify-content: space-between;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 328px;
-    border-radius: 26px;
-    padding: 0 87px;
+    width: 75rem;
+    height: 23.063rem;
+    /* border-radius: 26px; */
     margin: auto;
     margin-bottom: 176px;
     margin-top: 156px;
