ba9i ghyr respo

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@
     justify-content: space-between;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 75rem;
+    /* width: 75rem; */
     height: 23.063rem;
     /* border-radius: 26px; */
     margin: auto;
