--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     /* width: 75rem; */
-    height: 23.063rem;
+    /* height: 23.063rem; */
     /* border-radius: 26px; */
     margin: auto;
     margin-bottom: 176px;
