--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+}
 .c3-box {
     display: flex;
     flex-direction: column;
