--- a/style.css
+++ b/style.css
@@ -46,18 +46,50 @@
     letter-spacing: -0.03em;
     color: #757095;
 }
-.swiper{
+.slide-container{
     width: 100%;
-    height: 120%;
-    overflow-y: visible;
-}
-.swiper-button-next, .swiper-button-prev{
+    padding: 60px 0;
+  }
+  .slide-content{
+    overflow: hidden;
+  }
+  
+  .swiper-navBtn{
+    color: #6E93f7;
+    transition: color 0.3s ease;
+  }
+  .swiper-navBtn:hover{
+    color: #4070F4;
+  }
+  .swiper-navBtn::before,
+  .swiper-navBtn::after{
+    font-size: 35px;
+  }
+  .swiper-button-next{
+    right: 0;
+  }
+  .swiper-button-prev{
+    left: 0;
+  }
+  .swiper-pagination-bullet{
+    background-color: rgba(117, 112, 149, 0.25);
+    opacity: 1;
+  }
+  .swiper-pagination-bullet-active{
+  
+    background-color: #131429;
+    border: 3px solid #757095 ;
+  }
+  .swiper-button-next, .swiper-button-prev{
     opacity: 0;
-}
-
-span.swiper-pagination-bullet {
-    width: 14px;
-    height: 13px;
-    background-color: transparent;
-    border: 5px solid #75709540;
-}
+    height: 100%;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .slide-content{
+      margin: 0 10px;
+    }
+    .swiper-navBtn{
+      display: none;
+    }
+  }
